--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "mssql": "^11.0.1",
     "next": "^15.5.2",
     "next-auth": "^4.24.11",
+    "next-intl": "^4.3.9",
     "next-themes": "^0.4.6",
     "prisma": "^6.16.2",
     "react": "^19",
