--- a/package.json
+++ b/package.json
@@ -39,8 +39,8 @@
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
     "@supabase/supabase-js": "^2.57.4",
-    "@sveltejs/kit": "latest",
-    "@vercel/analytics": "latest",
+    "@sveltejs/kit": "^0.0.30",
+    "@vercel/analytics": "^1.3.2",
     "autoprefixer": "^10.4.20",
     "bcrypt": "^6.0.0",
     "class-variance-authority": "^0.7.1",
@@ -74,6 +74,7 @@
     "@next/swc-wasm-nodejs": "^15.5.2",
     "@tailwindcss/postcss": "^4.1.9",
     "@types/bcrypt": "^6.0.0",
+    "@types/date-fns": "^2.5.3",
     "@types/mssql": "^9.1.7",
     "@types/node": "^22",
     "@types/react": "^19",
