Thay đổi supbase, đổi một vài lệnh truy suất để phù hợp với code

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@vercel/analytics": "^1.3.2",
     "autoprefixer": "^10.4.20",
     "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
@@ -62,6 +63,7 @@
     "react-hook-form": "^7.60.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.4",
+    "slugify": "^1.6.6",
     "sonner": "^1.7.4",
     "svelte": "latest",
     "tailwind-merge": "^2.5.5",
@@ -73,6 +75,7 @@
     "@next/swc-wasm-nodejs": "^15.5.2",
     "@tailwindcss/postcss": "^4.1.9",
     "@types/bcrypt": "^6.0.0",
+    "@types/bcryptjs": "^2.4.6",
     "@types/date-fns": "^2.5.3",
     "@types/mssql": "^9.1.7",
     "@types/node": "^22",
